back out last change, Integer.valueOf(int) is not in Java 1.4