@@ -1049,8 +1049,10 @@ public class IOPort extends ComponentPort {
                     occurrence++;
                 }
 
-                // FindBugs: Use Integer.valueOf() instead of new Integer()
-                seen.put(relation, Integer.valueOf(occurrence));
+                // FindBugs: Use Integer.valueOf() instead of
+                // new Integer().  However Integer.valueOf(int)
+                // is not in Java 1.4
+                seen.put(relation, new Integer(occurrence));
 
                 Receiver[][] receivers = getReceivers(relation, occurrence);
 
@@ -1209,8 +1211,9 @@ public class IOPort extends ComponentPort {
                             occurrence++;
                         }
                         // FindBugs: Use Integer.valueOf() instead of
-                        // new Integer()
-                        seen.put(relation, Integer.valueOf(occurrence));
+                        // new Integer().  However Integer.valueOf(int)
+                        // is not in Java 1.4
+                        seen.put(relation, new Integer(occurrence));
 
                         Receiver[][] receiverRelation = getReceivers(relation,
                                 occurrence);
